--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   },
   "keywords": [],
   "author": {
-    "name": "Daniel Rosenwasser",
-    "url": "https://github.com/DanielRosenwasser"
+    "name": "NAthan Lively & Kyle Schneider",
+    "url": "https://github.com/ntlively/"
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "vue": "^2.5.2",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1"
@@ -23,15 +22,17 @@
   "devDependencies": {
     "@types/jest": "^23.3.2",
     "@vue/test-utils": "^1.0.0-beta.25",
-    "css-loader": "^0.28.1",
+    "css-loader": "^0.28.11",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.3",
-    "ts-loader": "^2.0.3",
-    "typescript": "^2.7.2",
+    "ts-loader": "^2.3.7",
+    "typescript": "^2.9.2",
+    "vue": "^2.6.10",
     "vue-jest": "^2.6.0",
-    "vue-loader": "^12.0.3",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^2.5.0"
+    "vue-loader": "^12.2.2",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^2.7.0",
+    "webpack-cli": "^3.3.6"
   },
   "jest": {
     "moduleFileExtensions": [
