--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "keywords": [],
   "author": {
-    "name": "NAthan Lively & Kyle Schneider",
+    "name": "Nathan Lively & Kyle Schneider",
     "url": "https://github.com/ntlively/"
   },
   "license": "Apache-2.0",
