--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@types/jasmine": "^3.4.0",
+    "jasmine": "^3.4.0",
     "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^6.0.0",
+    "vue-property-decorator": "^6.1.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@types/jest": "^23.3.2",
-    "@vue/test-utils": "^1.0.0-beta.25",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "css-loader": "^0.28.11",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.3",
