--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jasmine": "^3.4.0",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.1.0",
-    "vue-router": "^3.1.2"
+    "vue-router": "^3.1.2",
+    "vue-style-loader": "^4.1.2"
   },
   "devDependencies": {
     "@types/jest": "^23.3.2",
